# test_own_func

./: CMakeLists.txt  README.md  headers.h  image.qrc  main.cpp
1/: TestApertureCheck_1.cpp  TestApertureCheck_1.h  TestApertureCheck_1.ui  func1.cpp  func1.h  func1.ui
2/: TestUdpHeart_2.cpp  TestUdpHeart_2.h  TestUdpHeart_2.ui  func2.cpp  func2.h  func2.ui
3/: TestDockWidget_3.cpp  TestDockWidget_3.h  TestDockWidget_3.ui  func3.cpp  func3.h  func3.ui
4/: TestJsonToLawinfo_4.cpp  TestJsonToLawinfo_4.h  TestJsonToLawinfo_4.ui  func4.cpp  func4.h  func4.ui  parameter_tof_json.h
5/: multi_signals_one_slot.cpp  multi_signals_one_slot.h  multi_signals_one_slot.ui
6/: 00solution.h  01TwoPointersTowards.h  02SlidingWindow.h  03BinarySearch.h  04LinkedList.h  solution.h
7/: aboutui.cpp  aboutui.h  aboutui.ui
